objects/vlocity_cmt__DRBulkData__c.object
<CustomObject>
    <description>Vlocity interface object used to temporarily store bulk JSON data while it is in the process of being imported via Data Mapper.</description>
    <fields>
        <fullName>vlocity_cmt__AsyncApexJobId__c</fullName>
        <label>Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BulkChunkId__c</fullName>
        <externalId>true</externalId>
        <label>Bulk Chunk Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BulkChunkStatus__c</fullName>
        <label>Bulk Chunk Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRBundleName__c</fullName>
        <label>Data Mapper Custom Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRError__c</fullName>
        <description>Full error when processing.</description>
        <label>Data Mapper Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRProgressData__c</fullName>
        <description>JSON of current progress processing item if using bulk processing methods</description>
        <label>Data Mapper Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRStatus__c</fullName>
        <description>Status after processing Data Mapper map.</description>
        <label>Data Mapper Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Mapper Bulk Data</label>
    <nameField>
        <label>Data Mapper Bulk Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Mapper Bulk Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>